ISSUE-131 Enhance DavCalendarDeletionTaskStep